Color picker doesn't work properly when added using Python script #46113

Closed
opened 2015-09-14 19:59:44 +02:00 by Monaime · 8 comments

System Information
Windows 7 32bit & Nvidia 9800GT

Blender Version
Broken: ((2.75, 2.76-testbuild2)

Short description of error
When adding a FloatVectorProperty with "COLOR" as subtype, example FloatVectorProperty(size = 4, subtype = 'COLOR'), the color wheel works fine but the slider on the right for BW and RGB sliders don't work as expected.
same thing in HSV mode.

Exact steps for others to reproduce the error

Bug_report.blend

  • open the blend file
  • run the script
  • a panel named Bug report will apear in the properties section of the text editor
  • try to play around with the BW slider in the right side
**System Information** Windows 7 32bit & Nvidia 9800GT **Blender Version** Broken: ((2.75, 2.76-testbuild2) **Short description of error** When adding a FloatVectorProperty with "COLOR" as subtype, example FloatVectorProperty(size = 4, subtype = 'COLOR'), the color wheel works fine but the slider on the right for BW and RGB sliders don't work as expected. same thing in HSV mode. **Exact steps for others to reproduce the error** [Bug_report.blend](https://archive.blender.org/developer/F233310/Bug_report.blend) - open the blend file - run the script - a panel named Bug report will apear in the properties section of the text editor - try to play around with the BW slider in the right side
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Monaime

Added subscriber: @Monaime

Added subscriber: @ideasman42

Added subscriber: @ideasman42

While this certainly is glitchy, you can just pass min=0, max=1 to FloatVectorProperty for this to work as expected.

While this certainly is glitchy, you can just pass `min=0, max=1` to `FloatVectorProperty` for this to work as expected.

This issue was referenced by 0c2be4d8e8

This issue was referenced by 0c2be4d8e853a4c38f073921e9f01a4a7eeae945

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note that colors with extreme min/max aren't typically very useful.

However there was an error, where the min/max range weren't being converted into the display color space, making the slider fail to work properly.

Note that colors with extreme min/max aren't typically very useful. However there was an error, where the min/max range weren't being converted into the display color space, making the slider fail to work properly.
Author

Thanks for the quick fix.

Thanks for the quick fix.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46113
No description provided.