Fix T46113: Color picker erratic outside 0-1 range